adicionando console log para as requisicoes feitas  em na tab aberta

--- a/manifest.json
+++ b/manifest.json
@@ -26,12 +26,8 @@
     "https://*/*"],
   
   
-  
-    "content_scripts": [
-      {
-        "matches": ["*://*/*"],
-        "js": ["background.js"]
-      }
-    ]
+    "background": {
+      "scripts": ["background.js"]
+    }
   }
   
